--- a/src/dashboard/dashboard.scss
+++ b/src/dashboard/dashboard.scss
@@ -9,12 +9,14 @@
 
 .cardSmall {
     width: 20vw;
-    height: 15vh;
+    height: 30vh;
     margin: 2em;
     word-wrap: break-word;
     display: flex;
+    flex-direction: column;
     align-content: center;
     justify-content: center;
+    text-align: center;
     @include for-phone-only {
         width: 100%;
         margin: 2em;
@@ -22,4 +24,26 @@
         word-wrap: break-word;
     }
 
+}
+
+
+.skillStarBar {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.starFilled {
+    color:  #00dfc3;
+}
+.starNotFilled {
+    color: #999;
+}
+
+.navheader {
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
