updates to ui, user account page

--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -9,13 +9,15 @@ $pink: #fa7c91;
 $brown: #757763;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
-
+$teal: #00dfc3
+$atblue: #3d85ad
 // Update Bulma's global variables
 $family-sans-serif: 'Nunito', sans-serif;
 $grey-dark: $brown;
 $grey-light: $beige-light;
-$primary: $purple;
+// $primary: $teal;
 $link: $pink;
+$info: $atblue;
 $widescreen-enabled: true;
 $fullhd-enabled: true;
 
