--- a/src/dashboard/dashboard.scss
+++ b/src/dashboard/dashboard.scss
@@ -4,25 +4,48 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-
-.cardSmall {
-    width: 20vw;
-    height: 30vh;
+.cardOuter {
+    width: 25vw;
+    height: 35vh;
     margin: 2em;
-    word-wrap: break-word;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
     @include for-phone-only {
         width: 100%;
         margin: 2em;
         height: 100%;
         word-wrap: break-word;
     }
+}
+
+.cardSmall {
+    cursor: pointer;
+    width: 22vw;
+    height: 33vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    word-wrap: break-word;
+    border-radius: 5px;
+    background-color: #fff;
+    @include for-phone-only {
+        width: 100%;
+        height: 100%;
+        word-wrap: break-word;
+    }
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
+
+.cardSmall:hover {
+    transform: scale(1.1, 1.1);
+    transition: opacity 0.3s ease-in-out;
+    z-index: -1;
+    box-shadow: 0 1em 2em  rgba(0,0,0,0.15);
+    transition: box-shadow 0.3 ease-in-out;
 
 }
 
@@ -66,10 +89,17 @@ datalist {
 .starsList > li:hover ~ li {
     color:  #999 !important;
 } 
-.navheader {
+.navHeader {
     width: 20%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
+
+
+@media screen and (min-width: 769px), print {
+    .longerField {
+      flex-grow: 2; /* overwrites previous value of 1 */
+    }
+  }
