--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -15,3 +15,12 @@
   }
 
   
+  @media screen and (min-width: 769px), print {
+    .field-label {
+      flex-basis: 0;
+      flex-grow: 2;
+      flex-shrink: 0;
+      margin-right: 1.5rem;
+      text-align: right;
+  }
+  }
