filtering completed and change user availablity

--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -29,3 +29,5 @@ $input-shadow: none;
 
 // Import only what you need from Bulma
 @import '../../node_modules/bulma/bulma.sass'
+@import '../../node_modules/bulma-tooltip/src/sass/index.sass'
+@import '../../node_modules/bulma-switch/src/sass/index.sass'
