--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -70,3 +70,32 @@
           }
       }
   }
+
+
+  .navbar-item {
+    display: flex;
+  }
+  
+  .navbar,
+  .navbar-menu,
+  .navbar-start,
+  .navbar-end {
+    align-items: stretch;
+    display: flex;
+    padding: 0;
+  }
+  
+  .navbar-menu{
+    margin-top: 0.3em;
+    margin-left: 0.3em;
+    flex-grow: 1;
+    flex-shrink: 0;
+  }
+  .navbar-start{
+    justify-content: flex-start;
+    margin-right: auto;
+  }
+  .navbar-end{
+    justify-content: flex-end;
+    margin-left: auto;
+  }
